# NeuroForge-BCI

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docs/: architecture.md  regulatory-alignment.md  roadmap.md
examples/: full_run_example.py  simple_design_run.py
src/neuroforge/: __init__.py
src/neuroforge/agents/: __init__.py  biocompatibility.py  decoding.py  firmware.py  signal_processing.py
src/neuroforge/core/: __init__.py  engine.py  state.py
src/neuroforge/knowledge/: __init__.py  grokpedia.py
src/neuroforge/orchestrator/: __init__.py  governor.py
src/neuroforge/security/: __init__.py  audit.py  dasr.py
src/neuroforge/simulation/: __init__.py  neural_sim.py
src/neuroforge/ui/: __init__.py  dashboard.py
src/neuroforge/utils/: __init__.py  llm.py
tests/: test_state.py
