[project]
name = "neuroforge"
version = "0.1.0"
description = "Recursive AI swarm for safe, open BCI engineering"
readme = "README.md"
requires-python = ">=3.10,<3.14"  # CrewAI & LangGraph happy range
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your@email.com"},  # change to yours
]
keywords = ["bci", "ai-agents", "langgraph", "crewai", "neuralink", "safety-first"]

dependencies = [
    "langgraph >= 1.0.0",
    "crewai >= 1.9.0",
    "langchain-core >= 1.2.0",
    "langchain >= 1.2.0",               # for prompts, chains, etc.
    "langchain-xai >= 0.1.0",  # Grok integration
    "streamlit >= 1.54.0",
    "python-dotenv >= 1.0.0",
    "pydantic >= 2.5.0",
    "pyyaml >= 6.0.0",
    "tqdm >= 4.66.0",                   # nice progress bars
]

# Optional: for future extras (e.g. tools, embeddings)
[project.optional-dependencies]
tools = [
    "crewai-tools >= 1.9.0",
]
dev = [
    "pytest >= 8.0.0",
"pytest-cov >= 5.0.0",  # if you want coverage
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroforge"]
